--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,7 @@
 /config/credentials.yml.enc
 /config/secrets.yml
 /config/database.yml
+
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
